# localtube

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: config.toml.template  downloaded.toml.template
src/: main.rs
