[package]
name = "localtube"
version = "0.1.0"
authors = ["Martin Hartl <martin@hartl.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "0.6.0"
youtube_dl = "0.6.1 "
reqwest = "0.11.3"
tokio = { version = "1", features = ["full"] }
toml = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
clokwerk = "0.4.0-rc1"